<resources>
    <string name="app_name">Musick</string>
    <string name="options_add">Add</string>
    <string name="options_delete">Delete</string>
    <string name="options_exit">Exit</string>
    <string name="default_song_name">Song Title</string>
    <string name="default_artist_name">Artist</string>
    <string name="default_song_wiki">Song Wiki</string>
    <string name="default_video_url">Video Url</string>
    <string name="song_name_hint">Enter Song Name</string>
    <string name="artist_name_hint">Enter Artist Name</string>
    <string name="song_wiki_url_hint">Enter Song Wiki Url</string>
    <string name="song_video_url_hint">Enter Song Video Url</string>
    <string name="add_dialog_title">Enter Song Details</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="url_tag">url</string>
    <string name="artist_wiki_url_hint"> Enter Artist Wiki Url</string>
    <string name="default_artist_wiki_url"> Artist Wiki</string>
    <string name="context_song_play">Play Song</string>
    <string name="context_song_wiki">Song Wiki</string>
    <string name="context_artist_wiki">Artist Wiki</string>
    <string name="options_about">About</string>
    <string name="copyRight">Copyright \u00A9 2018 Abdul Muqeeth Mohammed. All rights reserved.</string>
    <string name="appDescription">Made with \u2764 in Chicago, IL</string>
    <string name="appaNameAbout">Musick\u2122</string>
</resources>
