<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/appaNameAbout"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/textViewCopyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/copyRight"
        android:textSize="12sp"
        />
    <TextView
        android:id="@+id/textViewAppDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:text="@string/appDescription"
        />

</LinearLayout>
